--- a/.env
+++ b/.env
@@ -12,6 +12,13 @@ DB_DATABASE=dbhrms
 DB_USERNAME=root
 DB_PASSWORD=
 
+#DB_CONNECTION=mysql
+#DB_HOST=power-hr-mysqldbserver.mysql.database.azure.com
+#DB_PORT=3306
+#DB_DATABASE=powerhr
+#DB_USERNAME=mysqldbadmin@power-hr-mysqldbserver
+#DB_PASSWORD=Mysql@db
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
 SESSION_DRIVER=file
