--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:IJo79RYfN5FU5JglpO1zQwm6me0mz0b+EnBDqRYHkNE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://localhost/Human-Resource-Management-System
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -22,11 +22,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com.
+MAIL_PORT=587
+MAIL_USERNAME=adeeljadoon947@gmail.com
+MAIL_PASSWORD=cubrid37406
+MAIL_ENCRYPTION=TLS
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
